Companies Data Alignment solved

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -215,11 +215,25 @@
     padding: 80px 64px;
 }
 
+.companyCardContainer {
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.companyCardLink {
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
 .companyCard {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     width: 100%;
+    height: 100%;
 }
 
 .companyCard svg {
